<resources>
    <string name="app_name">Nanodegree Project Hub</string>

    <string name="action_settings">Settings</string>
    <string name="mainTitle">Projects</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Football Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone_app">Capstone: My Own App</string>
    <string name="button_toast">"This button will launch the %1$s!"</string>
</resources>
