<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Base.TextAppearance.AppCompat.Title"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/mainTitle"
        android:textColor="@color/primary_text" />



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center">
        <Button
            android:id="@+id/btnSpotify"
            android:text="@string/spotify_streamer"
            android:layout_marginTop="0dp"
            style="@style/AppTheme.Widget.Button.Main" />

        <Button
            android:id="@+id/btnScores"
            style="@style/AppTheme.Widget.Button.Main"
            android:text="@string/scores_app" />

        <Button
            android:id="@+id/btnLibrary"
            style="@style/AppTheme.Widget.Button.Main"
            android:text="@string/library_app" />

        <Button
            android:id="@+id/btnBuildItBigger"
            style="@style/AppTheme.Widget.Button.Main"
            android:text="@string/build_it_bigger" />

        <Button
            android:id="@+id/btnBaconReader"
            style="@style/AppTheme.Widget.Button.Main"
            android:text="@string/xyz_reader" />

        <Button
            android:id="@+id/btnCapstone"
            style="@style/AppTheme.Widget.Button.Main"
            android:text="@string/capstone_app" />
    </LinearLayout>
</RelativeLayout>
